[package]
name = "libpoly"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.207", features = ["serde_derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
quick-xml = { version = "0.36.1", features = ["serde", "serde-types", "serialize"] }
clap = { version = "4.5.15"}
diqwest = { version = "3.1.0", features = ["blocking"] }
digest_auth = { version = "0.3.1", features = ["http"] }
