[package]
name = "polycli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.15", features = ["derive", "env"] }
handlebars = "6.0.0"
libpoly = {path = "../libpoly"}
quick-xml = { version = "0.36.1", features = ["serde", "serde-types"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
